// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Malarquee style Horn 1`] = `
.c1 {
  width: 1.5em !important;
  height: 1.5em !important;
  margin-top: 5px;
}

.c0 {
  margin-top: 0px;
}

<svg
  aria-hidden="true"
  class="icon c0 c1"
>
  <use
    href="#icon-pc"
  />
</svg>
`;

exports[`Malarquee style Label 1`] = `
.c0 {
  text-align: center;
  width: 8%;
  background: #ed6b44;
  float: left;
  color: white;
  border-radius: 4px 0px 0px 4px;
}

<span
  className="c0"
  type="pc"
/>
`;

exports[`Malarquee style MalarqueeWrapper 1`] = `
.c0 {
  display: inline-block;
  width: 90%;
}

<span
  className="c0"
  type="pc"
/>
`;

exports[`Malarquee style MarqueeWrapper 1`] = `
.c0 {
  background: white;
  border-radius: 5px;
}

<div
  class="layout-width c0"
/>
`;

exports[`Malarquee style Notice 1`] = `
.c0 {
  vertical-align: super;
  margin-left: 1px;
}

<span
  class="c0"
/>
`;
